--- a/styles/formSectionStyles.css
+++ b/styles/formSectionStyles.css
@@ -44,7 +44,7 @@
 
 .form__input,
 .form__comments {
-  background: #e3e3e3;
+  background: #f8dfaa;
   border: none;
   border-radius: 15px;
   color: #a0a0a0;
